force-app/main/default/objects/Diagnostic_Cache__c/Diagnostic_Cache__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Cache</label>
    <nameField>
        <label>Cache key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnostic Caches</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>