force-app/main/default/objects/Diagnostic_Cache__c/fields/Cache_Data__c.field-meta.xml
<CustomField>
    <fullName>Cache_Data__c</fullName>
    <label>Cache Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>