force-app/main/default/objects/Diagnostic_Cache__c/fields/Cache_Type__c.field-meta.xml
<CustomField>
    <fullName>Cache_Type__c</fullName>
    <label>Cache Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object Describe</fullName>
            </value>
            <value>
                <fullName>Field Describe</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
            <value>
                <fullName>Layout Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>