force-app/main/default/objects/Diagnostic_Cache__c/fields/Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time__c</fullName>
    <label>Expiration Time</label>
    <type>DateTime</type>
</CustomField>